# claude-code-usage-analyzer

./: .gitignore  README.md  implementation_prompt.md  pyproject.toml
.claude/commands/: analyze-my-usage.md
.claude/skills/analyze-my-usage/: SKILL.md
.claude/skills/analyze-my-usage/references/: first_time_setup.md  format_c.md  stage_b_workflow.md  stage_d_workflow.md
config/: carve_out_rules.yaml  company_system_hints.yaml  execution_keywords.yaml  function_groups.yaml  git_intent_patterns.yaml  outcome_signals.yaml  people_name_patterns.yaml  public_tools_whitelist.yaml  secret_patterns.yaml  split_signals.yaml
docs/: format_c_spec.md  pipeline_spec.md  principles_user_agnostic.md  stage_a_spec.md  stage_b_spec.md  stage_c_spec.md  yaml_specs.md
scripts/: bootstrap.sh  postprocess.sh  preprocess.sh  stage_a.py  stage_b.py  stage_c.py
scripts/lib/: carve_out.py  local_setup_extractor.py  masker.py  output_classifier.py  people_finder.py  structure_labeler.py  tool_mapper.py
